--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.002 - July 12, 2015
+Joel C. Maslak <jmaslak@antelope.net>
+ * Don't call standard exit() on Windows, use POSIX:_exit() instead
+
 1.001 - July 12, 2015
 Joel C. Maslak <jmaslak@antelope.net>
  * Changed behavior for reads, so that the return value can be ready by
