--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 1.002 - July 12, 2015
 Joel C. Maslak <jmaslak@antelope.net>
  * Don't call standard exit() on Windows, use POSIX:_exit() instead
+ * Don't use SIG{CHLD} = 'IGNORE'
 
 1.001 - July 12, 2015
 Joel C. Maslak <jmaslak@antelope.net>
