Handle storable errors gracefully

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,8 @@ Joel C. Maslak <jmaslak@antelope.net>
  * Don't use SIG{CHLD} = 'IGNORE' (bug 105823, reported by SREZIC)
  * Relaxed Perl minimum version requirements (bug 105824, reported by
    SREZIC)
+ * Returned better error messages in cases where freeze() fails (bug
+   105825, reported by SREZIC)
 
 1.001 - July 12, 2015
 Joel C. Maslak <jmaslak@antelope.net>
