--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+1.003 - July 13, 2015
+Joel C. Maslak <jmaslak@antelope.net>
+ * This version doesn't have any functionality changes from 1.002
+ * A test failed on some shells due to insecure $ENV in taint mode
+ * Minor documentation changes
+
 1.002 - July 12, 2015
 Joel C. Maslak <jmaslak@antelope.net>
  * Windows compatibility fixes
