--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
+1.012 - Oct 26, 2017
+ * Minor test updates
+
 1.011 - Oct 26, 2017
  * Worker pool implication
  * Minor documentation changes
+ * Released as DEV version
 
 1.010 - Jun 22, 2016
 Joelle Maslak <jmaslak@antelope.net>
