Add missing author name in CHANGES

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,9 @@
 1.012 - Oct 26, 2017
+Joelle Maslak <jmaslak@antelope.net>
  * Minor test updates
 
 1.011 - Oct 26, 2017
+Joelle Maslak <jmaslak@antelope.net>
  * Worker pool implication
  * Minor documentation changes
  * Released as DEV version
