--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.013 - Dec 12, 2017
+Joelle Maslak <jmaslak@antelope.net>
+ * Support AnyEvent (optionally, not required)
+
 1.012 - Oct 26, 2017
 Joelle Maslak <jmaslak@antelope.net>
  * Minor test updates
