Fix typos in CHANGES

--- a/CHANGES
+++ b/CHANGES
@@ -8,7 +8,7 @@ Joelle Maslak <jmaslak@antelope.net>
 
 1.011 - Oct 26, 2017
 Joelle Maslak <jmaslak@antelope.net>
- * Worker pool implication
+ * Worker pool implimentation
  * Minor documentation changes
  * Released as DEV version
 
