--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+1.015 - Dec 15, 2017
+Joelle Maslak <jmaslak@antelope.net>
+ * Switch from Thread::Queue to socket pairs to allow select() on
+   Windows when AnyEvent::Util::portable_pipe is available.
+
 1.014 - Dec 13, 2017
 Joelle Maslak <jmaslak@antelope.net>
  * Use AnyEvent::Util::portable_pipe on Windows when using available,
