--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,14 @@
+1.100 - Dec 16, 2017
+Joelle Maslak <jmaslak@antelope.net>
+ * First release version with AnyEvent support
+
 1.015 - Dec 15, 2017
 Joelle Maslak <jmaslak@antelope.net>
  * Switch from Thread::Queue to socket pairs to allow select() on
    Windows when AnyEvent::Util::portable_pipe is available.
  * Use native Perl fork emulation when AnyEvent::Util::portable_pipe
    is available
+ * Released as DEV (TRIAL) version for CPAN Testers validation
 
 1.014 - Dec 13, 2017
 Joelle Maslak <jmaslak@antelope.net>
