--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 1.110 - Jan 8, 2017
 Joelle Maslak <jmaslak@antelope.net>
- * Provide ordered response support (spawn these threads, have the
+ * Provide ordered response support (spawn work units, have the
    results put into an array in order of spawning of the work units)
 
 1.100 - Dec 16, 2017
