--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 1.111 - Jan 22, 2018
 Joelle Maslak <jmaslak@antelope.net>
  * Minor documentation update (remove reference to "ordered" attribute)
+ * Storable in 5.27.9 now supports (experimentally) regexp freezing,
+   which caused a test to fail (we tested that if a regexp was returned
+   from a child, that should have thrown an exception - which most version
+   of storable do).
 
 1.110 - Jan 8, 2018
 Joelle Maslak <jmaslak@antelope.net>
