--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+1.200 - June 4, 2018
+Joelle Maslak <jmaslak@antelope.net>
+ * Remove Moose and replace with standard Perl object system to lower
+   the number of dependencies this pulls in
+ * Released as DEV (TRIAL) version for CPAN Testers validation
+
 1.118 - May 28, 2018
 Joelle Maslak <jmaslak@antelope.net>
  * Full release version
