--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 Joelle Maslak <jmaslak@antelope.net>
  * Remove Moose and replace with standard Perl object system to lower
    the number of dependencies this pulls in
+ * Fix test failures if AnyEvent not present
  * Released as DEV (TRIAL) version for CPAN Testers validation
 
 1.118 - May 28, 2018
