Use config bundle

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 1.202 - ????
 Joelle Maslak <jmaslak@antelope.net>
  * Add Code of Conduct
+ * Use Dist:Zilla author plugin bundle
 
 1.201 - June 4, 2018
 Joelle Maslak <jmaslak@antelope.net>
