--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 {{$NEXT}}
+ Joelle Maslak <jmaslak@antelope.net>
+ * Add procedural interface (see Parallel::WorkUnit::Procedural)
+ * Add start() block (async() without any internal accounting or ability
+   to wait on child)
 
 2.181850  2018-07-03 21:37:57-06:00 America/Denver
  Joelle Maslak <jmaslak@antelope.net>
