--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - Migrated testing to Test2
 
 2.191821  2019-07-01 07:13:01-06:00 America/Denver
  * Add procedural interface (see Parallel::WorkUnit::Procedural)
