--- a/Changes
+++ b/Changes
@@ -1,10 +1,12 @@
 {{$NEXT}}
- - [bugfix] AnyEvent no longer erroniously required
- - [bugfix] use_anyevent => <val> passed to constructor now honored
- - [bugfix] max_children => <val> passed to constructor now honored
+  Joelle Maslak <jmaslak@antelope.net>
+ * [bugfix] AnyEvent no longer erroniously required
+ * [bugfix] use_anyevent => <val> passed to constructor now honored
+ * [bugfix] max_children => <val> passed to constructor now honored
+ * Trial Release
 
 2.201890  2020-07-07 02:19:50+00:00 UTC
- - Migrated testing to Test2
+ * Migrated testing to Test2
 
 2.191821  2019-07-01 07:13:01-06:00 America/Denver
  * Add procedural interface (see Parallel::WorkUnit::Procedural)
