--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 {{$NEXT}}
+ Joelle Maslak <jmaslak@antelope.net>
+ Bring forward changes from Trial releases:
+ * [bugfix] Remove requirement for Thread::Queue
+ * [bugfix] AnyEvent no longer erroniously required
+ * [bugfix] use_anyevent => <val> passed to constructor now honored
+ * [bugfix] max_children => <val> passed to constructor now honored
 
 2.202160  2020-08-03 01:47:35+00:00 UTC (TRIAL RELEASE)
  Joelle Maslak <jmaslak@antelope.net>
