--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ Parallel::WorkUnit - Provide multi-paradigm forking with ability to pass back da
 
 =head1 VERSION
 
-version 2.202270
+version 2.232010
 
 =head1 SYNOPSIS
 
@@ -268,13 +268,22 @@ Note that the child inherits all open file descriptors.
 Not also that the child process will be part of the same process group as the
 parent process.  Additional work is required to daemonize the child.
 
+=head1 CAVEAT
+
+Because information passed back from the asyncronous processes is sent
+serialized and sent through a pipe, it is not possible at this time to
+return all the rich data structures Perl has. In particular, you cannot
+return C<REGEXP>, C<CODE>, or C<OBJECT> references (note that C<OBJECT>
+should not be confused with Perl objects created without the "class"
+keyword introduced experimentally in Perl 5.38).
+
 =head1 AUTHOR
 
 Joelle Maslak <jmaslak@antelope.net>
 
 =head1 COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2020 by Joelle Maslak.
+This software is copyright (c) 2015-2023 by Joelle Maslak.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
