Support FREEZE/THAW

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 {{$NEXT}}
+ Joelle Maslak <jmaslak@antelope.net>
+ * Add support for objects with FREEZE/THAW methods (use those over
+   other methods)
 
 2.232010  2023-07-19 20:22:17-06:00 America/Denver (TRIAL RELEASE)
  Joelle Maslak <jmaslak@antelope.net>
