--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ Parallel::WorkUnit - Provide multi-paradigm forking with ability to pass back da
 
 =head1 VERSION
 
-version 2.232010
+version 2.232011
 
 =head1 SYNOPSIS
 
@@ -267,6 +267,15 @@ Note that the child inherits all open file descriptors.
 
 Not also that the child process will be part of the same process group as the
 parent process.  Additional work is required to daemonize the child.
+
+=head1 CAVEATS
+
+This module uses L<Storable> to serialize objects, except for objects
+that have a C<FREEZE> and C<THAW> method defined, in which case those
+methods are used.  As a result, it cannot serialize some objects, such
+as C<REGEXP> (sometimes), C<CODE>, or C<OBJECT> (I.E. Corinna objects
+created with the C<class> statement in Perl 5.38+), unless these
+objects also have a C<FREEZE> and C<THAW> method defined.
 
 =head1 AUTHOR
 
