--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 {{$NEXT}}
+ Joelle Maslak <jmaslak@antelope.net>
+ * [bugfix] Tests were failing on Perl 5.38 with
+   Feature::Compat::Class > 0.06.
 
 2.243450  2024-12-10 11:11:54-07:00 America/Denver
  Joelle Maslak <jmaslak@antelope.net>
